# data-polaris

./: .gitignore  00000-0-0efa7e5f-a5ef-44e8-8681-44f9d813fa55.parquet  README.md  docker-compose.yml  polaris-config.properties  pyproject.toml  run_demo.sh
src/data_polaris/: config.py  producer.py  reader.py  setup_polaris.py
